--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.jeffscaturro.bikeathon"
+        applicationId "com.jeffscaturro.pikappaphibikeathon"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 2
